Adding solution for task 3 after passing tests

--- a/css/index.css
+++ b/css/index.css
@@ -76,6 +76,7 @@ nav{
 }
 nav a{
     color:#626262;
+    padding: 0% 8%;
 }
 nav span{
     border-left:3px solid #626262;
@@ -133,4 +134,44 @@ button:hover{
 }
 .artist img{
     width:100%;
+}
+
+/* Responsive Styles */
+
+@media (max-width: 500px){
+    nav a {
+        padding: 0% 8%;
+        font-size: 1.75rem;
+        font-weight: 400;
+    }
+
+    nav span {
+        border-left: 2px solid #626262;
+        display: block;
+        height: 50%;
+        margin-top: 5%;
+    }
+
+    .title-container div {
+        width: 100%;
+        height: 46vh;
+        background-position: 46% 58%;
+    }
+    h1 {
+        font-size: 4rem;
+        font-weight: 600;
+    }
+    button {
+        font-size: 2rem;
+    }
+    .artists-container {
+        flex-direction: column;
+        align-items: center;;
+    }
+    .artist {
+        width: 80%
+    }
+    .artist img {
+        height: 25vh;
+    }
 }
